--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f35faef6",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f9e7344d",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "095ab1f6",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0fcac9e1",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "96bd18ac",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d528643c8adb4a6cbca525e1facbf094",
+       "model_id": "3e410192908e4a4a8c615452c1e0fc23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,18 +474,14 @@
      "text": [
       "/Users/shin-younghoon/Desktop/presido/.venv/lib/python3.12/site-packages/transformers/convert_slow_tokenizer.py:561: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
       "  warnings.warn(\n",
-      "Device set to use cpu\n",
-      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+      "Device set to use cpu\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Korean PII Processor initialized successfully.\n",
-      "('안녕하세요, 제 이름은 <PERSON>, 저의 주민등록번호는 <ID> 입니다. 유효하지 않은 주민번호 <PERSON> 있습니다. 제 '\n",
-      " '이메일은 <EMAIL>, 연락처는 <KR_PHONE_NUMBER> 입니다. 다른 전화번호는 <KR_PHONE_NUMBER> 입니다. '\n",
-      " '주거래 은행 계좌번호는 <KR_BANK_ACCOUNT_NUMBER> 입니다.')\n"
+      "Korean PII Processor initialized successfully.\n"
      ]
     }
    ],
@@ -504,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f846afff",
    "metadata": {},
    "outputs": [
@@ -527,19 +523,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f54462a1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'안녕하세요, 제 이름은 <PERSON>, 저의 주민등록번호는 <ID> 입니다. 유효하지 않은 주민번호 <PERSON> 있습니다. 제 이메일은 <EMAIL>, 연락처는 <KR_PHONE_NUMBER> 입니다. 다른 전화번호는 <KR_PHONE_NUMBER> 입니다. 주거래 은행 계좌번호는 <KR_BANK_ACCOUNT_NUMBER> 입니다.'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('안녕하세요, 제 이름은 <PERSON>, 저의 주민등록번호는 <ID> 입니다. 유효하지 않은 주민번호 <PERSON> 있습니다. 제 '\n",
+      " '이메일은 <EMAIL>, 연락처는 <KR_PHONE_NUMBER> 입니다. 다른 전화번호는 <KR_PHONE_NUMBER> 입니다. '\n",
+      " '주거래 은행 계좌번호는 <KR_BANK_ACCOUNT_NUMBER> 입니다.')\n"
+     ]
     }
    ],
    "source": [
